--- a/delegateToController/Base.lproj/Main.storyboard
+++ b/delegateToController/Base.lproj/Main.storyboard
@@ -205,9 +205,9 @@
                                 </constraints>
                                 <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" returnKeyType="done"/>
                             </textField>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" alpha="0.59999999999999998" contentMode="scaleToFill" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DZu-Ps-unc">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" alpha="0.59999999999999998" contentMode="scaleToFill" keyboardDismissMode="interactive" translatesAutoresizingMaskIntoConstraints="NO" id="DZu-Ps-unc">
                                 <rect key="frame" x="30" y="239" width="354" height="185"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
@@ -215,15 +215,9 @@
                                 </constraints>
                                 <color key="textColor" systemColor="labelColor"/>
                                 <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="20"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="words"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="words" returnKeyType="done"/>
+                                <dataDetectorType key="dataDetectorTypes" phoneNumber="YES" link="YES" address="YES"/>
                             </textView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bwk-JE-hhP">
-                                <rect key="frame" x="30" y="273" width="354" height="185"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" alpha="0.75" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lock Off" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="187-3S-CFL">
                                 <rect key="frame" x="232" y="434" width="92" height="35"/>
                                 <constraints>
@@ -276,7 +270,7 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="cdn-i0-Yxi" secondAttribute="trailing" constant="30" id="0Zc-Kv-nf2"/>
-                            <constraint firstItem="187-3S-CFL" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="64m-mD-AHy" secondAttribute="leading" symbolic="YES" id="1DJ-we-i0E"/>
+                            <constraint firstItem="187-3S-CFL" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="64m-mD-AHy" secondAttribute="leading" constant="20" symbolic="YES" id="1DJ-we-i0E"/>
                             <constraint firstItem="vEQ-P6-RqF" firstAttribute="top" secondItem="DZu-Ps-unc" secondAttribute="bottom" constant="55" id="1Ue-Qo-ggy"/>
                             <constraint firstItem="Qob-ZA-gxO" firstAttribute="leading" secondItem="6LO-Oh-POH" secondAttribute="trailing" constant="10" id="3zI-lH-4dn"/>
                             <constraint firstItem="cdn-i0-Yxi" firstAttribute="top" secondItem="DZu-Ps-unc" secondAttribute="bottom" constant="10" id="51r-PH-DqD"/>
